# quick-menu

./: Cargo.toml  LICENSE  README.md  rustfmt.toml  test-options  test-options-simple  test-options-wrapping
src/: args.rs  config.rs  events.rs  main.rs  parse.rs
src/interface/: events.rs  mod.rs  terminal.rs  ui.rs
src/interface/ui/: colors.rs  colorscheme.rs  customizations.rs  input_mode.rs  list.rs  mod.rs  options_list.rs  query.rs  vector.rs
src/interface/ui/list/: customizations.rs  mod.rs  state.rs
src/interface/ui/widgets/: mod.rs  searchbar.rs
src/interface/ui/widgets/list/: mod.rs  state.rs
