[package]
name = "quick-menu"
description = "A terminal based menu app with hotkeys to select an option."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/xRetart/quick-menu"
keywords = ["menu", "tui", "hotkeys"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.23", features = ["derive"] }
textwrap = "0.16.0"
crossterm = "0.27.0"
ratatui = "0.23.0"
fuzzy-matcher = "0.3.7"
